# TapeSorter

./: CMakeLists.txt  README.md  TapeSorter.sln
TapeInteractor/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  InputGenerator.cpp  InputGenerator.h  MenuManager.cpp  MenuManager.h  OutputReader.cpp  OutputReader.h  TapeInteractor.cpp  TapeInteractor.h  TapeInteractor.vcxproj  TapeInteractor.vcxproj.filters  main.cpp
TapeSorter/: CMakeLists.txt  DelayConfig.cpp  DelayConfig.h  FileTape.cpp  FileTape.h  Tape.h  TapeSorter.cpp  TapeSorter.h  TapeSorter.vcxproj  TapeSorter.vcxproj.filters  config.txt  main.cpp
TapeSorterTests/: CMakeLists.txt  MockTape.cpp  MockTape.h  TapeSorterTests.cpp  TapeSorterTests.vcxproj
